--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   }
 }
