--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.201",
     "@types/mongoose": "^5.11.97",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   }
